<resources>
    <string name="app_name">Steganographics</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_encode">Encode</string>
    <string name="section_format">Hello World from section: %1$d</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_mms">MMS</string>
    <string name="title_activity_decode">Decode</string>
    <string name="choose_encryption">Encryption type</string>
    <string name="no_encryption">None</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="filename">Filename (optional)</string>
    <string name="password">Password</string>
    <string name="encode_button">ENCODE</string>
    <string name="hint_message" >Message</string>
    <string name="main_button_encode">Encode</string>
    <string name="main_button_share">share</string>
    <string name="main_button_decode">decode</string>
    <string name="error_camera">There was an error with taking a pic with the camera.</string>
    <string name="picture">Picture</string>
    <string name="communicate">Communicate</string>
    <string name="error_encode">There was an error with the encoding.</string>
    <string name="picture_path">Picture was saved to</string>
    <string name="hide_msg">Encoding</string>
    <string name="decode_button">Decode</string>
    <string name="clipboard_button">Copy to clipboard</string>
    <string name="save_text_button">Save text to a file</string>
    <string name="result">Result</string>
    <string name="error_decode_encryption">There was an error with encryption. Are you sure you chose the right algorithm and password?</string>
    <string name="file_found_toast">A file was hidden in the picture. Saving...</string>
    <string name="file_saved_toast">File saved to </string>
    <string name="error_file_saved">There was an error with saving the file.</string>
    <string name="message">Message</string>
    <string name="successful_decode">Decoded successfully! Swipe left to see results.</string>
    <string name="message_copied">Message has been copied to the clipboard.</string>
    <string name="error_message_save">There was an error when saving the message.</string>
    <string name="message_save_success">Message saved successfully to</string>
    <string name="title_activity_share_after_encode">ShareAfterEncode</string>
    <string name="File">File</string>
    <string name="Text">Text</string>
    <string name="share_dialog_title">Share</string>
    <string name="choose_file" >Choose a file</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="file_chosen">File chosen:</string>
    <string name="need_message">Please input your message before encoding it.</string>
    <string name="need_picture">Please choose a picture before encoding.</string>
    <string name="need_file">Please choose a file before encoding.</string>
    <string name="need_passwd">Please input password before encoding.</string>
    <string name="share_dialog_text">Do you want to open gallery and share the picture?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="error_decode">There was an error with decoding. Are you sure you chose the right picture and password?</string>
    <string name="progress_reading_data">Reading data...</string>
    <string name="progress_encrypting">Encrypting...</string>
    <string name="progress_encoding">Encoding...</string>
    <string name="progress_saving">Saving...</string>
    <string name="progress_please_wait">Please wait</string>
    <string name="progress_getting_pixels">Getting pixels...</string>
    <string name="message_type">Message type</string>
</resources>
