<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_encode" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/main_button_encode" />
        <item android:id="@+id/nav_decode" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/main_button_decode" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/main_button_share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Exit2" />
        </menu>
    </item>

</menu>