<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.wngud.stegano.EncodeFragment3">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/filename"
            android:id="@+id/filenameField"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/passwdField"
            android:layout_below="@+id/filenameField"
            android:layout_alignStart="@+id/filenameField"
            android:layout_alignEnd="@+id/filenameField" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode_button"
            android:onClick="onClickEncode"
            android:id="@+id/encodeButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="54dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</FrameLayout>
