<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:id="@+id/fragment2"
    android:layout_height="match_parent" tools:context="com.example.wngud.stegano.DecodeFragment2">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/decodeMessageField"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/clipboardButton"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/message" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clipboard_button"
            android:id="@+id/clipboardButton"
            android:layout_above="@+id/saveButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:onClick="onClickClipboard" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text_button"
            android:id="@+id/saveButton"
            android:layout_marginBottom="63dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:onClick="onClickSave" />
    </RelativeLayout>
</FrameLayout>
