<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.wngud.stegano.DecodeFragment1">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView android:src="@drawable/gallery"
            android:layout_width="wrap_content"
            android:layout_height="386dp"
            android:id="@+id/decodePreview"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/decodeGallery" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/decodePassword"
            android:layout_below="@+id/decodePreview"
            android:hint="@string/password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decode_button"
            android:id="@+id/decodeButton"
            android:layout_below="@+id/decodePassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:onClick="onClickDecode"
            android:layout_marginBottom="80dp"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:id="@+id/decodeGallery"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:onClick="onClickGallery" />

    </RelativeLayout>
</FrameLayout>
