<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_encode"
        android:id="@+id/goEncode"
        android:onClick="GoEncode"
        android:layout_above="@+id/goDecode"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_decode"
        android:id="@+id/goDecode"
        android:layout_above="@+id/GoMMS"
        android:layout_alignEnd="@+id/goEncode"
        android:layout_alignParentStart="true"
        android:onClick="GoDecode" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exit"
        android:id="@+id/Exitbtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MainImage"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/goEncode"
        android:layout_above="@+id/goEncode"
        android:layout_alignParentTop="true"
        android:background="@drawable/mainimage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_share"
        android:id="@+id/GoMMS"
        android:layout_above="@+id/Exitbtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="GoMMS" />
</RelativeLayout>
